Fix issue with shifting window when opening modal

--- a/source/styles/astrojason.scss
+++ b/source/styles/astrojason.scss
@@ -35,3 +35,11 @@
     display: none;
   }
 }
+
+.modal {
+  overflow-y: auto;
+}
+
+.modal-open {
+  overflow: auto;
+}
